--- a/package.json
+++ b/package.json
@@ -23,21 +23,34 @@
     "url": "git://github.com/kgryte/node-app-etc.git"
   },
   "keywords": [
-		"app",
-		"etc",
-		"config",
-		"configuration",
-		"settings",
-		"env",
-		"load",
-		"parse",
-		"utils",
-		"utility"
-	],
+    "app",
+    "etc",
+    "config",
+    "configuration",
+    "settings",
+    "environment",
+    "env",
+    "load",
+    "parse",
+    "utils",
+    "utility"
+  ],
   "bugs": {
     "url": "https://github.com/kgryte/node-app-etc/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "app-etc-config": "0.0.0",
+    "app-etc-load": "0.0.0",
+    "resolve-app-path": "^1.0.2",
+    "resolve-app-pkginfo": "^1.0.0",
+    "utils-deep-set": "^1.0.1",
+    "utils-extname": "^1.0.0",
+    "utils-fs-exists": "^1.0.1",
+    "utils-merge2": "^1.0.0",
+    "validate.io-object": "^1.0.4",
+    "validate.io-string-array": "^1.0.0",
+    "validate.io-string-primitive": "^1.0.0"
+  },
   "devDependencies": {
     "chai": "3.x.x",
     "codecov.io": "^0.1.5",
