--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "validate.io-string-primitive": "^1.0.0"
   },
   "devDependencies": {
+    "@kgryte/noop": "^1.0.0",
     "chai": "3.x.x",
     "codecov.io": "^0.1.5",
     "istanbul": "^0.3.0",
