--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "utils-deep-set": "^1.0.1",
     "utils-extname": "^1.0.0",
     "utils-fs-exists": "^1.0.1",
+    "utils-json-parse": "^1.0.0",
     "utils-merge2": "^1.0.0",
+    "validate.io-nan": "^1.0.3",
     "validate.io-object": "^1.0.4",
     "validate.io-string-array": "^1.0.0",
     "validate.io-string-primitive": "^1.0.0"
