--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
   "keywords": [
     "app",
     "application",
+    "server",
+    "service",
+    "microservice",
     "etc",
+    "conf",
     "config",
+    "configure",
     "configuration",
     "settings",
-    "environment",
     "env",
+    "environment",
     "load",
     "parse",
     "utils",
@@ -44,6 +49,7 @@
     "app-etc-load": "0.0.0",
     "resolve-app-path": "^1.0.2",
     "resolve-app-pkginfo": "^1.0.0",
+    "utils-configdir": "^1.0.0",
     "utils-deep-set": "^1.0.1",
     "utils-extname": "^1.0.0",
     "utils-fs-exists": "^1.0.1",
