--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
     "argv-to-object": "1.x.x",
     "debug": "^2.2.0",
     "env-to-object": "1.x.x",
+    "find-user-app-config": "^1.0.0",
     "resolve-app-path": "^1.0.2",
     "resolve-app-pkginfo": "^1.0.0",
-    "utils-configdir": "^1.0.0",
     "utils-extname": "^1.0.0",
     "utils-fs-exists": "^1.0.1",
     "utils-merge2": "^1.0.0",
